--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:windowSoftInputMode="adjustResize|stateVisible">
         </activity>
         
+        <activity
+            android:name="com.wunderman.meuford.RegisterActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize|stateVisible">
+        </activity>
+        
     </application>
 
 </manifest>
