--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wunderman.meuford"
     android:versionCode="1"
     android:versionName="1.0.0" >
@@ -9,34 +10,45 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    
     <application
         android:name="com.wunderman.meuford.util.SystemApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@drawable/ic_launcher"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        
         <activity
             android:name="com.wunderman.meuford.SplashActivity"
             android:configChanges="locale"
             android:launchMode="singleInstance"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
             android:name="com.wunderman.meuford.LoginActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:windowSoftInputMode="adjustResize|stateVisible"
+            android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        
         <activity
-            android:name="com.wunderman.meuford.SettingsActivity"
-            android:label="@string/title_activity_settings" >
+            android:name="com.wunderman.meuford.ForgotPasswordActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize|stateVisible">
         </activity>
+        
+        <activity
+            android:name="com.wunderman.meuford.RegisterActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize|stateVisible">
+        </activity>
+        
     </application>
 
 </manifest>
